#288: renames submodule from jfxbfr to clv, introduces new clv-app module, adds some performance optimisations

--- a/app-tests/pom.xml
+++ b/app-tests/pom.xml
@@ -24,7 +24,7 @@
         </dependency>
         <dependency>
             <groupId>app.logorrr</groupId>
-            <artifactId>jfxbfr</artifactId>
+            <artifactId>clv</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
