#288: fixes some warnings

--- a/app-tests/pom.xml
+++ b/app-tests/pom.xml
@@ -61,7 +61,7 @@
                     <skipTests>false</skipTests>
                     <!-- see https://github.com/TestFX/TestFX?tab=readme-ov-file for testfx parameters-->
                     <!--  -Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true -Dprism.order=sw -Dprism.verbose=true -->
-                    <argLine>--enable-native-access=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED -Djava.library.path=${basedir}/target/native</argLine>
+                    <argLine>-Djava.util.logging.config.file=test-logging.properties --sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED  -Djava.library.path=${basedir}/target/native</argLine>
                 </configuration>
             </plugin>
         </plugins>
