--- a/docs/src/main/resources/screenshotter-2560-1600.conf
+++ b/docs/src/main/resources/screenshotter-2560-1600.conf
@@ -7,42 +7,43 @@
             },
             "divider-position" : 0.5,
             "file-id" : "/Users/lad/gh/LogoRRR/docs/src/main/resources/example.log",
-            "filters" : [
-                {
-                    "active" : true,
-                    "color" : "0x00ff00ff",
-                    "pattern" : "LogoRRR"
-                },
-                {
-                    "active" : true,
-                    "color" : "0xe6b34dff",
-                    "pattern" : "WARN"
-                },
-                {
-                    "active" : true,
-                    "color" : "0x82cabbff",
-                    "pattern" : "create mode"
-                },
-                {
-                    "active" : true,
-                    "color" : "0xff0000ff",
-                    "pattern" : "Exception"
-                },
-                {
-                    "active" : true,
-                    "color" : "0xff6666ff",
-                    "pattern" : "at "
-                }
-            ],
-            "first-opened" : 1730045369460,
+            "first-opened" : 1755636563633,
             "first-visible-text-cell-index" : 0,
             "font-size" : 12,
             "last-visible-text-cell-index" : 0,
             "lower-timestamp" : 0,
+            "search-terms" : [
+                {
+                    "active" : true,
+                    "color" : "0x00ff00ff",
+                    "value" : "LogoRRR"
+                },
+                {
+                    "active" : true,
+                    "color" : "0xe6b34dff",
+                    "value" : "WARN"
+                },
+                {
+                    "active" : true,
+                    "color" : "0x82cabbff",
+                    "value" : "create mode"
+                },
+                {
+                    "active" : true,
+                    "color" : "0xff0000ff",
+                    "value" : "Exception"
+                },
+                {
+                    "active" : true,
+                    "color" : "0xff6666ff",
+                    "value" : "at "
+                }
+            ],
             "selected-line-number" : 0,
             "upper-timestamp" : 1730045438927
         }
     },
+    "some-active" : "/Users/lad/gh/LogoRRR/docs/src/main/resources/example.log",
     "stage-settings" : {
         "height" : 1600,
         "width" : 2560,
