--- a/native/native-osx/pom.xml
+++ b/native/native-osx/pom.xml
@@ -35,6 +35,7 @@
                                 <argument>${project.basedir}/src/main/c</argument>
                                 <argument>${project.basedir}/../../app/src/main/java/app/logorrr/OsxBridge.java</argument>
                             </arguments>
+                            <useMavenLogger>true</useMavenLogger>
                         </configuration>
                     </execution>
                     <!-- compile swift code -->
