--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,11 @@
                 <version>0.0.1</version>
             </dependency>
             <dependency>
+                <groupId>de.jangassen</groupId>
+                <artifactId>nsmenufx</artifactId>
+                <version>3.1.0</version>
+            </dependency>
+            <dependency>
                 <groupId>org.testfx</groupId>
                 <artifactId>testfx-core</artifactId>
                 <version>4.0.18</version>
