--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
     <artifactId>logorrr</artifactId>
     <version>${revision}${changelist}</version>
     <name>app.logorrr</name>
-    <description>LogoRRR - the log visualisation tool</description>
+    <description>LogoRRR - logfiles at a glance.</description>
     <packaging>pom</packaging>
     <properties>
         <revision>25.1.1</revision>
         <scala.major.version>2.13</scala.major.version>
-        <scala.version>${scala.major.version}.16</scala.version>
+        <scala.version>${scala.major.version}.17</scala.version>
         <openjfx.version>25</openjfx.version>
         <ikonli.version>12.4.0</ikonli.version>
         <!-- no need to change these -->
