#281: restructures flatpak build

--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,7 @@
             <properties>
                 <jfxdownload.os.arch>x64</jfxdownload.os.arch>
                 <deb.os.arch>amd64</deb.os.arch>
+                <flatpak.os.arch>amd64</flatpak.os.arch>
             </properties>
         </profile>
 
@@ -142,6 +143,7 @@
             <properties>
                 <jfxdownload.os.arch>aarch64</jfxdownload.os.arch>
                 <deb.os.arch>arm64</deb.os.arch>
+                <flatpak.os.arch>aarch64</flatpak.os.arch>
             </properties>
         </profile>
     </profiles>
