--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <properties>
         <revision>25.2.0</revision>
         <scala.major.version>2.13</scala.major.version>
-        <scala.version>${scala.major.version}.17</scala.version>
-        <openjfx.version>25</openjfx.version>
+        <scala.version>${scala.major.version}.18</scala.version>
+        <openjfx.version>25.0.1</openjfx.version>
         <ikonli.version>12.4.0</ikonli.version>
         <!-- no need to change these -->
         <changelist></changelist>
@@ -524,11 +524,8 @@
                                         </message>
                                     </requireMavenVersion>
                                     <requireJavaVersion>
-                                        <version>24</version>
-                                        <message>JDK 24 or newer is recommended to build LogoRRR, use SDKman.io or
-                                            download from a JDK provider like this one:
-                                            https://github.com/adoptium/temurin24-binaries/releases/download/jdk-24.0.1%2B9/OpenJDK24U-jdk_x64_windows_hotspot_24.0.1_9.zip
-                                        </message>
+                                        <version>25</version>
+                                        <message>JDK 25 or newer is recommended to build LogoRRR</message>
                                     </requireJavaVersion>
                                 </rules>
                                 <fail>true</fail>
