#313: adds screenshots for LogoRRR 25.2.0

--- a/docs/src/main/resources/screenshotter-2880-1800.conf
+++ b/docs/src/main/resources/screenshotter-2880-1800.conf
@@ -12,6 +12,31 @@
             "font-size" : 12,
             "last-visible-text-cell-index" : 0,
             "lower-timestamp" : 0,
+            "search-term-groups" : {
+                "default" : [
+                    {
+                        "active" : true,
+                        "color" : "0x808080ff",
+                        "value" : "FINEST"
+                    },
+                    {
+                        "active" : true,
+                        "color" : "0x008000ff",
+                        "value" : "INFO"
+                    },
+                    {
+                        "active" : true,
+                        "color" : "0xffa500ff",
+                        "value" : "WARNING"
+                    },
+                    {
+                        "active" : true,
+                        "color" : "0xff0000ff",
+                        "value" : "SEVERE"
+                    }
+                ],
+                "empty" : []
+            },
             "search-terms" : [
                 {
                     "active" : true,
@@ -35,14 +60,40 @@
                 }
             ],
             "selected-line-number" : 0,
+            "some-selected-search-term-group" : "default",
             "upper-timestamp" : 1730045438927
         }
+    },
+    "search-term-groups" : {
+        "default" : [
+            {
+                "active" : true,
+                "color" : "0x808080ff",
+                "value" : "FINEST"
+            },
+            {
+                "active" : true,
+                "color" : "0x008000ff",
+                "value" : "INFO"
+            },
+            {
+                "active" : true,
+                "color" : "0xffa500ff",
+                "value" : "WARNING"
+            },
+            {
+                "active" : true,
+                "color" : "0xff0000ff",
+                "value" : "SEVERE"
+            }
+        ],
+        "empty" : []
     },
     "some-active" : "/Users/lad/gh/LogoRRR/docs/src/main/resources/example.log",
     "stage-settings" : {
         "height" : 1800,
         "width" : 2880,
-        "x" : 1920.0,
-        "y" : 133.0
+        "x" : 100.0,
+        "y" : 100.0
     }
 }
