#313: fixes graal.os.arch identifier

--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,7 @@
                 <jfxdownload.os.arch>x64</jfxdownload.os.arch>
                 <deb.os.arch>amd64</deb.os.arch>
                 <flatpak.os.arch>amd64</flatpak.os.arch>
-                <graal.os.arch>aarch64</graal.os.arch>
+                <graal.os.arch>amd64</graal.os.arch>
             </properties>
         </profile>
 
