--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <description>LogoRRR - logfiles at a glance.</description>
     <packaging>pom</packaging>
     <properties>
-        <revision>25.2.0</revision>
+        <revision>26.1.0</revision>
         <scala.major.version>2.13</scala.major.version>
         <scala.version>${scala.major.version}.18</scala.version>
         <openjfx.version>25</openjfx.version>
@@ -154,6 +154,7 @@
         <module>env</module>
         <module>clv</module>
         <module>clv-app</module>
+        <module>app-icons</module>
         <module>app</module>
         <module>dist</module>
         <module>docs</module>
@@ -246,6 +247,12 @@
                 <artifactId>testfx-junit5</artifactId>
                 <version>4.0.18</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>app.logorrr</groupId>
+                <artifactId>app-icons</artifactId>
+                <version>${project.version}</version>
+                <type>jar</type>
             </dependency>
             <dependency>
                 <groupId>app.logorrr</groupId>
