#333: removes app-tests, benchmark and OS.linux.flatpak.dist profile

--- a/benchmarks/pom.xml
+++ b/benchmarks/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>benchmarks</artifactId>
     <packaging>jar</packaging>
 
-    <name>JMH benchmarks for LogoRRR</name>
+    <name>app.logorrr.benchmarks</name>
 
     <dependencies>
         <dependency>
