--- a/app/pom.xml
+++ b/app/pom.xml
@@ -47,6 +47,10 @@
             <artifactId>pureconfig_${scala.major.version}</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>toolkit_${scala.major.version}</artifactId>
+        </dependency>
+        <dependency>
             <groupId>app.logorrr</groupId>
             <artifactId>build</artifactId>
         </dependency>
