#14: introduces scala3 library, applies automatic rewrites

--- a/clv-app/pom.xml
+++ b/clv-app/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
+          <artifactId>scala3-library_3</artifactId>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -32,7 +32,7 @@
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_${scala.major.version}</artifactId>
+            <artifactId>scalatest_3</artifactId>
         </dependency>
     </dependencies>
     <build>
