--- a/app/pom.xml
+++ b/app/pom.xml
@@ -15,7 +15,7 @@
     <dependencies>
         <dependency>
             <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
+          <artifactId>scala3-library_3</artifactId>
         </dependency>
 
         <!-- uncomment if atlantafx is needed for enhancing css
@@ -44,7 +44,7 @@
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
-            <artifactId>toolkit_${scala.major.version}</artifactId>
+            <artifactId>toolkit_3</artifactId>
         </dependency>
         <dependency>
             <groupId>app.logorrr</groupId>
@@ -75,15 +75,15 @@
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_${scala.major.version}</artifactId>
+            <artifactId>scalatest_3</artifactId>
         </dependency>
         <dependency>
             <groupId>org.scalacheck</groupId>
-            <artifactId>scalacheck_${scala.major.version}</artifactId>
+            <artifactId>scalacheck_3</artifactId>
         </dependency>
         <dependency>
             <groupId>org.scalatestplus</groupId>
-            <artifactId>scalacheck-1-15_${scala.major.version}</artifactId>
+            <artifactId>scalacheck-1-15_3</artifactId>
         </dependency>
     </dependencies>
     <build>
