--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,7 @@
     <packaging>pom</packaging>
     <properties>
         <revision>26.1.0</revision>
-        <scala.major.version>2.13</scala.major.version>
-        <scala.version>${scala.major.version}.18</scala.version>
+        <scala.version>3.7.4</scala.version>
         <openjfx.version>25</openjfx.version>
         <ikonli.version>12.4.0</ikonli.version>
         <!-- no need to change these -->
@@ -158,7 +157,7 @@
             </dependency>
             <dependency>
                 <groupId>org.scala-lang</groupId>
-                <artifactId>scala-library</artifactId>
+              <artifactId>scala3-library_3</artifactId>
                 <version>${scala.version}</version>
             </dependency>
             <dependency>
@@ -210,24 +209,24 @@
             </dependency>
             <dependency>
                 <groupId>org.scala-lang</groupId>
-                <artifactId>toolkit_${scala.major.version}</artifactId>
+                <artifactId>toolkit_3</artifactId>
                 <version>0.7.0</version>
             </dependency>
             <dependency>
                 <groupId>org.scalatest</groupId>
-                <artifactId>scalatest_${scala.major.version}</artifactId>
-                <version>3.2.11</version>
+                <artifactId>scalatest_3</artifactId>
+                <version>3.2.19</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.scalatestplus</groupId>
-                <artifactId>scalacheck-1-15_${scala.major.version}</artifactId>
+                <artifactId>scalacheck-1-15_3</artifactId>
                 <version>3.2.11.0</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.scalacheck</groupId>
-                <artifactId>scalacheck_${scala.major.version}</artifactId>
+                <artifactId>scalacheck_3</artifactId>
                 <version>1.15.4</version>
                 <scope>test</scope>
             </dependency>
@@ -375,31 +374,11 @@
                             <arg>-feature</arg>
                             <arg>-encoding</arg>
                             <arg>utf-8</arg>
-                            <arg>-explaintypes</arg>
-                            <arg>-feature</arg>
-                            <arg>-language:existentials</arg>
-                            <arg>-language:experimental.macros</arg>
-                            <arg>-language:higherKinds</arg>
-                            <arg>-language:implicitConversions</arg>
                             <arg>-unchecked</arg>
-                            <arg>-Xcheckinit</arg>
-                            <arg>-Xlint:adapted-args</arg>
-                            <arg>-Xlint:constant</arg>
-                            <arg>-Xlint:delayedinit-select</arg>
-                            <arg>-Xlint:doc-detached</arg>
-                            <arg>-Xlint:inaccessible</arg>
-                            <arg>-Xlint:infer-any</arg>
-                            <arg>-Xlint:missing-interpolator</arg>
-                            <arg>-Xlint:nullary-unit</arg>
-                            <arg>-Xlint:option-implicit</arg>
-                            <arg>-Xlint:package-object-classes</arg>
-                            <arg>-Xlint:poly-implicit-overload</arg>
-                            <arg>-Xlint:private-shadow</arg>
-                            <arg>-Xlint:stars-align</arg>
-                            <arg>-Xlint:type-parameter-shadow</arg>
-                            <arg>-Ywarn-unused</arg>
-                            <arg>-Yrangepos</arg>
-                            <arg>-Werror</arg>
+                            <arg>-explain</arg>
+                            <arg>-Wunused:all</arg>
+                            <arg>-rewrite</arg>
+                            <arg>-source:3.4-migration</arg>
                         </args>
                     </configuration>
                 </plugin>
