#297: adds jfx-incubator-richtext dependency

--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,11 @@
                 <version>${openjfx.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>jfx-incubator-richtext</artifactId>
+                <version>${openjfx.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>io.github.mkpaz</groupId>
                 <artifactId>atlantafx-base</artifactId>
                 <version>2.0.1</version>
