--- a/app/pom.xml
+++ b/app/pom.xml
@@ -54,6 +54,10 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>jfx-incubator-richtext</artifactId>
+        </dependency>
         <!-- needed if you want to use scenic view analyse the scenegraph -->
         <!--
         <dependency>
