--- a/app-tests/pom.xml
+++ b/app-tests/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>app-tests</artifactId>
     <description>Frontend / Integration tests for LogoRRR</description>
     <inceptionYear>2024</inceptionYear>
-    <name>${groupId}:${artifactId}</name>
+    <name>${project.groupId}:${project.artifactId}</name>
     <dependencies>
         <dependency>
             <groupId>org.scala-lang</groupId>
