--- a/clv-app/pom.xml
+++ b/clv-app/pom.xml
@@ -9,7 +9,7 @@
         <version>${revision}${changelist}</version>
     </parent>
     <artifactId>clv-app</artifactId>
-    <name>${groupId}:${artifactId}</name>
+    <name>${project.groupId}:${project.artifactId}</name>
     <description>App to showcase features of clv</description>
     <inceptionYear>2025</inceptionYear>
 
