--- a/native/pom.xml
+++ b/native/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>app.logorrr.native</groupId>
     <artifactId>native</artifactId>
-    <name>${groupId}:${artifactId}</name>
+    <name>${project.groupId}:${project.artifactId}</name>
     <packaging>pom</packaging>
 
     <profiles>
