--- a/app-tests/pom.xml
+++ b/app-tests/pom.xml
@@ -59,9 +59,10 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <skipTests>false</skipTests>
+                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <!-- see https://github.com/TestFX/TestFX?tab=readme-ov-file for testfx parameters-->
                     <!--  -Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true -Dprism.order=sw -Dprism.verbose=true -->
-                    <argLine>-Djava.util.logging.config.file=test-logging.properties --sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED  -Djava.library.path=${basedir}/target/native</argLine>
+                    <argLine>--sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED -Djava.library.path=${basedir}/target/native</argLine>
                 </configuration>
             </plugin>
         </plugins>
