#333: removes outdated monocle dependency

--- a/app-tests/pom.xml
+++ b/app-tests/pom.xml
@@ -39,10 +39,6 @@
             <groupId>org.testfx</groupId>
             <artifactId>testfx-core</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.testfx</groupId>
-            <artifactId>openjfx-monocle</artifactId>
-        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -59,9 +55,12 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <skipTests>false</skipTests>
+                    <!--
+                    <forkCount>1C</forkCount>
+                    <reuseForks>false</reuseForks>
+                    -->
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                    <!-- see https://github.com/TestFX/TestFX?tab=readme-ov-file for testfx parameters-->
-                    <!--  -Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true -Dprism.order=sw -Dprism.verbose=true -->
+                    <!-- add -Dglass.platform=Headless for headless tests -->
                     <argLine>--sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED -Djava.library.path=${basedir}/target/native</argLine>
                 </configuration>
             </plugin>
