--- a/env/pom.xml
+++ b/env/pom.xml
@@ -20,6 +20,17 @@
             https://download2.gluonhq.com/openjfx/${openjfx.version}/openjfx-${openjfx.version}_${openjfx.os.prefix}-${jfxdownload.os.arch}_bin-sdk.zip
         </openjfx.sdk.download.url>
     </properties>
+<!--
+    <properties>
+        <openjfx.jmods.download.url>
+            https://download2.gluonhq.com/openjfx/26/openjfx-26-ea+25_osx-aarch64_bin-jmods.zip
+        </openjfx.jmods.download.url>
+        <openjfx.sdk.download.url>
+            https://download2.gluonhq.com/openjfx/26/openjfx-26-ea+25_osx-aarch64_bin-sdk.zip
+        </openjfx.sdk.download.url>
+    </properties>
+-->
+
 
     <build>
         <plugins>
